# 02-running-pytest-tests-starter

./: README.md  area.py  pyproject.toml
.github/: cspell.json
.github/workflows/: grade.yml
config/: gatorgrade.yml
tests/: test_area.py
writing/: reflection.md
