[tool.poetry]
name = "lab02-running-pytest-tests"
version = "0.1.0"
description = ""
authors = ["Janyl Jumadinova <jjumadinova@allegheny.edu>"]

[tool.poetry.dependencies]
python = ">=3.7"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
